# rust-embed-for-web

./: .all-contributorsrc  Cargo.toml  README.md  readme.md
.github/workflows/: release.yml  test.yml
examples/: actix.rs
impl/: Cargo.toml
impl/src/: attributes.rs  compress.rs  dynamic.rs  embed.rs  lib.rs
src/: lib.rs
tests/: basic.rs  compression.rs  contents.rs  gzip.rs  include-exclude.rs  meta.rs  prefix.rs
tests/common/: mod.rs
utils/: Cargo.toml
utils/src/: config.rs  lib.rs
utils/src/file/: common.rs  dynamic.rs  embed.rs  mod.rs
