[package]
name = "rust-embed-for-web"
version = "11.1.1"
description = "Rust Macro which embeds files into your executable. A fork of `rust-embed` with a focus on usage on web servers."
readme = "readme.md"
documentation = "https://docs.rs/rust-embed-for-web"
repository = "https://github.com/SeriousBug/rust-embed-for-web"
license = "MIT"
keywords = ["http", "embed", "static", "web", "server"]
categories = ["web-programming", "filesystem"]
edition = "2018"

[dependencies]
walkdir = "2.3.1"
rust-embed-for-web-impl = { version = "11.1.1", path = "impl" }
rust-embed-for-web-utils = { version = "11.1.1", path = "utils" }

[dev-dependencies]
chrono = { version = "0.4", default-features = false }
flate2 = "1.0"
brotli = "3.3"
actix-web = "4.2"

[features]
default = ["interpolate-folder-path", "include-exclude"]
# Even in debug mode use a release embed.
# We use this to test embed code in our tests.
always-embed = ["rust-embed-for-web-impl/always-embed"]
# Allow environment variables and ~'s to be expanded
interpolate-folder-path = ["rust-embed-for-web-impl/interpolate-folder-path"]
include-exclude = [
  "rust-embed-for-web-impl/include-exclude",
  "rust-embed-for-web-utils/include-exclude",
]

[workspace]
members = ["impl", "utils"]

[[test]]
name = "compression"
path = "tests/compression.rs"
required-features = ["always-embed"]

[[test]]
name = "gzip"
path = "tests/gzip.rs"
required-features = ["always-embed"]

[[test]]
name = "include-exclude"
path = "tests/include-exclude.rs"
required-features = ["include-exclude"]
