[package]
name = "rust-embed-for-web-impl"
description = "The proc-macro implementation of rust-embed-for-web."
version = "11.1.1"
readme = "readme.md"
repository = "https://github.com/SeriousBug/rust-embed-for-web"
license = "MIT"
keywords = ["http", "rocket", "static", "web", "server"]
categories = ["web-programming::http-server"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
rust-embed-for-web-utils = { version = "11.1.0", path = "../utils" }

syn = { version = "1", default-features = false, features = [
  "derive",
  "parsing",
  "proc-macro",
] }
quote = "1"
proc-macro2 = "1"
walkdir = "2.3.1"

# Compression
flate2 = "1.0"
brotli = "3.3"

globset = { version = "0.4", optional = true }

[dependencies.shellexpand]
version = "2.1"
optional = true

[features]
default = []
interpolate-folder-path = ["shellexpand"]
include-exclude = ["rust-embed-for-web-utils/include-exclude", "globset"]
always-embed = []
