[package]
name = "rust-embed-for-web-impl"
description = "The proc-macro implementation of rust-embed-for-web."
version = "11.1.4"
readme = "readme.md"
repository = "https://github.com/SeriousBug/rust-embed-for-web"
license = "MIT"
keywords = ["http", "rocket", "static", "web", "server"]
categories = ["web-programming::http-server"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
rust-embed-for-web-utils = { version = "11.1.4", path = "../utils" }

syn = { version = "2.0", default-features = false, features = [
  "derive",
  "parsing",
  "proc-macro",
] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.4.0"

# Compression
flate2 = "1.0"
brotli = "3.4"

globset = { version = "0.4", optional = true }

[dependencies.shellexpand]
version = "3.1"
optional = true

[features]
default = []
interpolate-folder-path = ["shellexpand"]
include-exclude = ["rust-embed-for-web-utils/include-exclude", "globset"]
always-embed = []
